# CH341A-BIOS-Flasher-Tauri

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  chips.json  index.html  package-lock.json  package.json
docs/: SOP-MEJA-BIOS-FLASHER.html  SOP-MEJA-BIOS-FLASHER.md
src/: App.jsx  index.css
src-tauri/: Cargo.toml  chips.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_parser.rs
src-tauri/src/: lib.rs  main.rs
