[package]
name = "bios-flasher"
version = "2.1.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "bios_flasher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
regex = "1"
